--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ article.article a{border-bottom:1px solid #777;}
 
 /* other-section */
 .other-section{}
-.other-section ul{display:block;}
-.other-section ul:after{content:'';display:block;clear:both;}
-.other-section li{float:left;display:inline-block;width:33.3%;text-align:center;}
-.other-section img{width:100px;height:auto;}
+.other-section ul{display:flex;flex-wrap:wrap;}
+.other-section li{display:flex;flex-direction:column;align-items:center;justify-content:center;width:33.3%;text-align:center;}
+.other-section .img-area{display:flex;width:100px;height:100px;align-items:center;justify-content:center;}
+.other-section img{max-width:100px;width:auto;height:auto;}
 .other-section span{display:block;text-align:center;font-size:0.875em;}
 
 /* carrer-list */
